[project]
name = "phi-async-lab"
version = "0.1.0"
description = "A deterministic pre-course lab for learning Python async programming before Phi."
readme = "README.md"
authors = [
    { name = "ukeSJTU" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
phi-async-lab = "phi_async_lab:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
strict_config = true
strict_markers = true
